--- a/index.html
+++ b/index.html
@@ -24,6 +24,94 @@
         <button>Login</button>
     </nav>
 
+    <section>
+        <header>
+            <h1>BOOTCAMP DNC</h1>
+            <h2>Esse será um evento exclusivo para todos os alunos <br>
+                da <b>DNC</b>, que querem <span class="cor-fundo">acelerar a carreira</span> com uma <br>
+                semana intensiva de conteúdo de mercado entre <br>
+                <span class="cor-fundo">BACK-END, FRONT-END & BANCO DE DADOS.</span>
+            </h2>
+        </header>
+        <form action="">
+            <div class="formulario-grupo">
+                <label for="">Nome:</label>
+                <input type="text" placeholder="Insira seu nome aqui">
+            </div>
+
+            <div class="formulario-grupo">
+                <label for="">Sobrenome:</label>
+                <input type="text" placeholder="Insira seu sobrenome aqui">
+            </div>
+
+            <div class="formulario-grupo">
+                <label for="">Área de interesse:</label>
+                <div class="checkbox-itens">
+                    <input type="checkbox" value="FRONT-END">
+                    <label for="">Front-End</label>
+                    <input type="checkbox" value="BACK-END">
+                    <label for="">Back-End</label>
+                    <input type="checkbox" value="BANCO DE DADOS">
+                    <label for="">Banco de Dados</label>
+                </div>
+            </div>
+
+            <div class="formulario-grupo">
+                <label for="">E-mail:</label>
+                <input type="text" placeholder="Insira seu e-mail aqui">
+            </div>
+
+            <div class="formulario-grupo">
+                <label for="">Telefone:</label>
+                <input type="text" placeholder="(99)99999-9999">
+            </div>
+
+            <div class="formulario-grupo">
+                <label for="">Insira uma frase criativa aqui:</label>
+                <input type="text" placeholder="Qual frase criativa você gostaria de falar?:)">
+            </div>
+
+            <input id="cadastro" type="submit" value="Cadastrar">
+        </form>
+    </section>
+
+    <footer>
+        <div class="linha-1">
+            <nav>
+                <h4>Escolas</h4>
+                <ul>
+                    <li><a href="">Formação em Tecnologia</a></li>
+                    <li><a href="">Formação em Marketing</a></li>
+                    <li><a href="">Formação em Dados</a></li>
+                    <li><a href="">Formação em Projetos</a></li>
+                    <li><a href="">Formação em Produto</a></li>
+                </ul>
+            </nav>
+
+            <nav>
+                <h4>Sobre a DNC</h4>
+                <ul>
+                    <li><a href="">História</a></li>
+                    <li><a href="">Missão e Valores</a></li>
+                    <li><a href="">Trabalhe Conosco</a></li>
+                    <li><a href="">Conteúdo Gratuito</a></li>
+                </ul>
+            </nav>
+
+            <div class="endereco">
+                © 2022 DTC Treinamentos & Consultoria LTDA <br>
+                | CNPJ: 27.995.577/0001-37 | R. <br>
+                Justino Cobra, 61 – Vila Ema | São José dos <br>
+                Campos – SP | CEP 12243-030
+            </div>
+        </div>
+
+        <div class="linha-2">
+            <a href="">Termos de Uso</a>
+            <a href="">Política de Privacidade</a>
+        </div>
+    </footer>
+
 </body>
 
 </html>
